Repair all malformed English YAML apostrophes at runtime